--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: "Engineering Wahala"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Omo Engineer"
+author: "Mbana G.M."
+description: "Omo Engineer blends street smarts with technical insight to inspire the next generation of local makers and problem-solvers." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
+email: "bigembee24@gmail.com"
+twitter_username: "@bigembee"
+github_username: "bigembee"
 linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
