--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "Omo Engineer"
+title: "Mbana G.M. Wall"
 author: "Mbana G.M."
-description: "Omo Engineer blends street smarts with technical insight to inspire the next generation of local makers and problem-solvers." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "I explain how things work and give technical insights to inspire the next generation of local makers and problem-solvers." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "bigembee24@gmail.com"
 twitter_username: "@bigembee"
 github_username: "bigembee"
-linkedin_username: "linkedinuser"
+#linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
